// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/components/atoms/Arrow stories Both matches markup snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="none"
    height="50"
    viewBox="0 0 9 9"
    width="50"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M1 4.5L8.5 4.5"
      stroke="#ff0000"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
    <path
      d="M4.75 0.750001L8.5 4.5L4.75 8.25"
      stroke="#ff0000"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
  </svg>
</DocumentFragment>
`;

exports[`app/components/atoms/Arrow stories Color matches markup snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="none"
    height="9"
    viewBox="0 0 9 9"
    width="9"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M1 4.5L8.5 4.5"
      stroke="#ff0000"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
    <path
      d="M4.75 0.750001L8.5 4.5L4.75 8.25"
      stroke="#ff0000"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
  </svg>
</DocumentFragment>
`;

exports[`app/components/atoms/Arrow stories Default matches markup snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="none"
    height="9"
    viewBox="0 0 9 9"
    width="9"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M1 4.5L8.5 4.5"
      stroke="#0066FF"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
    <path
      d="M4.75 0.750001L8.5 4.5L4.75 8.25"
      stroke="#0066FF"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
  </svg>
</DocumentFragment>
`;

exports[`app/components/atoms/Arrow stories Sized matches markup snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="none"
    height="50"
    viewBox="0 0 9 9"
    width="50"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M1 4.5L8.5 4.5"
      stroke="#0066FF"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
    <path
      d="M4.75 0.750001L8.5 4.5L4.75 8.25"
      stroke="#0066FF"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
  </svg>
</DocumentFragment>
`;
